# ephemeral-storage-setup

./: README.md  pyproject.toml
ephemeral_storage_setup/: cli.py  devices.py  execute.py  utils.py
examples/: config.yml
tests/: conftest.py  test_devices.py  test_ephemeral_storage_setup.py  test_integration.py  test_utils.py
tests/qemu/: config.yml  run.sh  run_inside_vm.sh
tests/resources/: lsblk_output.json
