[tool.poetry]
name = "ephemeral-storage-setup"
version = "0.1.0"
description = ""
authors = ["Sven Ulland <sven.ulland@gmail.com>"]

[tool.poetry.scripts]
ephemeral-storage-setup = "ephemeral_storage_setup.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8"
PyYAML = "^6.0"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^22.3.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: should run slow tests",
]
